[FIX] website: prevent dynamic snippet flicker in edit mode
* Prior to this commit the dynamic snippet was flickering (destroy followed
  by init) because the parallax option triggers a _refreshPublicWidgets
  in the onFocus. As such each time the user clicks somewhere in the snippet
  the snippet desapears and reappears which can be confusing for the user.

* After this commit, the parallax option will only trigger a refresh on snippets that
  are using parallax. This commit also prevent the user from selecting an element of
  the dynamic snippet as it is not customizable.

task-2339246

X-original-commit: ac2d836af9a38687dd0c6d377212f49b102892af

--- a/addons/website/static/src/scss/website.edit_mode.scss
+++ b/addons/website/static/src/scss/website.edit_mode.scss
@@ -198,3 +198,15 @@ body.editor_enable {
         }
     }
 }
+
+//s_dynamic_snippet
+body.editor_enable {
+    .s_dynamic {
+        > * {
+            pointer-events: none;
+        }
+        [data-url] {
+            cursor: inherit;
+        }
+    }
+}
